shellfirm/tests/snapshots/checks__kubernetes-delete_namespace.yaml.snap
---
source: shellfirm/tests/checks.rs
expression: test_file_results
---
[
    TestSensitivePatternsResult {
        file_path: "kubernetes-delete_namespace.yaml",
        test: "k delete ns",
        check_detection_ids: [
            "kubernetes:delete_namespace",
            "kubernetes-strict:require_context",
            "kubernetes-strict:delete_resource",
        ],
        test_description: "match command",
    },
    TestSensitivePatternsResult {
        file_path: "kubernetes-delete_namespace.yaml",
        test: "kubectl    delete    namespace",
        check_detection_ids: [
            "kubernetes:delete_namespace",
            "kubernetes-strict:require_context",
            "kubernetes-strict:delete_resource",
        ],
        test_description: "match command with spaces",
    },
    TestSensitivePatternsResult {
        file_path: "kubernetes-delete_namespace.yaml",
        test: "kubectll delete",
        check_detection_ids: [],
        test_description: "invalid command",
    },
]
